# python-natnet-client

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  run-pre-commit.yml
example/: count_frames.py
natnet/: data_frame.py  data_types.py  nat_net_client.py  packet_component.py  server_info.py  version.py
natnet_client/: __init__.py  data_descriptions.py  data_frame.py  exceptions.py  nat_net_client.py  packet_buffer.py  packet_component.py  server_info.py  version.py
